2006-05-21  Brian Warner  <warner@lothar.com>

	* buildbot/process/process_twisted.py
	(QuickTwistedBuildFactory.__init__): recent versions of Twisted
	changed the build process. The new setup.py no longer takes the
	'all' argument.
	(FullTwistedBuildFactory.__init__): same
	(TwistedReactorsBuildFactory.__init__): same

	* contrib/hg_buildbot.py: wrote a commit script for mercurial, to
	be placed in the [hooks] section of the central repository (the
	one that everybody pushes changes to).

2006-05-20  Brian Warner  <warner@lothar.com>

	* buildbot/slave/commands.py (Darcs.doVCFull): when writing the
	.darcs-context file, use binary mode. I think this was causing a
	Darcs failure under windows.

2006-05-19  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/tryclient.py (CVSExtractor.getBaseRevision):
	use a timezone string of +0000 and gmtime, since this timestamp is
	sent to a buildmaster and %z is broken.

	* buildbot/test/test_vc.py (CVSHelper.getdate): use no timezone
	string and localtime, since this timestamp will only be consumed
	locally, and %z is broken.

	* buildbot/slave/commands.py (CVS.parseGotRevision): use +0000 and
	gmtime, since this timestamp is returned to the buildmaster, and
	%z is broken.

2006-05-18  Brian Warner  <warner@lothar.com>

	* NEWS: update in preparation for next release

	* buildbot/test/test_vc.py (VCS_Helper): factor out all the
	setup-repository and do-we-have-the-vc-tools code into a separate
	"helper" class, which sticks around in a single module-level
	object. This seems more likely to continue to work in the future
	than having it hide in the TestCase and hope that TestCases stick
	around for a long time.

	* buildbot/test/test_vc.py (MercurialSupport.vc_create): 'hg
	addremove' has been deprecated in recent versions of mercurial, so
	use 'hg add' instead

2006-05-07  Brian Warner  <warner@lothar.com>

	* buildbot/scheduler.py (Try_Jobdir.messageReceived): when