@@ -1,5 +1,11 @@
 2006-05-21  Brian Warner  <warner@lothar.com>
 
+	* buildbot/status/html.py (Waterfall): add 'robots_txt=' argument,
+	a filename to be served as 'robots.txt' to discourage web spiders.
+	Adapted from a patch by Tobi Vollebregt, thanks!
+	* buildbot/test/test_web.py (Waterfall._test_waterfall_5): test it
+	* docs/buildbot.texinfo (HTML Waterfall): document it
+
 	* buildbot/process/process_twisted.py
 	(QuickTwistedBuildFactory.__init__): recent versions of Twisted
 	changed the build process. The new setup.py no longer takes the
